--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span id="lblJogadas">(1ª Jogada)</span>
                 </h2>
 
-                <input type="button" value="Reiniciar" id="btnReiniciar" onclick="clickReiniciar()">
+                <input type="button" value="Reiniciar" id="btnReiniciar" onclick="window.location.reload()">
             </section>
         </section>
     </main>
